practica_2_2526/ros2_ws/log/build_2026-03-24_20-07-45/maze_pkg/stderr.log
  File "/workspace/ros2_ws/install/maze_pkg/lib/python3.10/site-packages/maze_pkg/pledge_maze.py", line 125
    main()import math
          ^^^^^^
SyntaxError: invalid syntax

